# board-react-django2

back/: db.sqlite3  pyproject.toml
back/mysite/: settings.py  urls.py
back/posts/: admin.py  models.py  serializers.py  urls.py  views.py
back/posts/migrations/: 0001_initial.py
